add_subdirectory(hello)
add_subdirectory(sum)
add_subdirectory(nvshmem-hello)
add_subdirectory(nvshmem-mpi)
add_subdirectory(nvshmem-mpi-uid)
add_subdirectory(nvshmem-put)
add_subdirectory(nvshmem-put-nbi)
add_subdirectory(nvshmem-put-nbi-block)
add_subdirectory(nvshmem-put-nbi-warp)
add_subdirectory(nvshmem-collective-launch)
