add_subdirectory(hello)
add_subdirectory(sum)
add_subdirectory(warp)
add_subdirectory(__shfl)
add_subdirectory(device-symbol)
add_subdirectory(zero-copy)
add_subdirectory(nvshmem-hello)
add_subdirectory(nvshmem-mpi)
add_subdirectory(nvshmem-mpi-uid)
add_subdirectory(nvshmem-put)
add_subdirectory(nvshmem-all2all)
add_subdirectory(nvshmem-put-nbi)
add_subdirectory(nvshmem-put-nbi-block)
add_subdirectory(nvshmem-put-nbi-warp)
add_subdirectory(nvshmem-collective-launch)
add_subdirectory(nvshmem-moe-count)
add_subdirectory(nccl-symmetric-memory)
add_subdirectory(ipc)
